[gd_scene load_steps=10 format=2]

[ext_resource path="res://Font/ZCOOLKuaiLe-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/button.tres" type="Theme" id=2]
[ext_resource path="res://Script/Title.gd" type="Script" id=3]
[ext_resource path="res://Scene/Background.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=3]
size = 128
outline_size = 3
outline_color = Color( 0.54902, 0.658824, 0.239216, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -888, 15 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Text"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( -888, 15 ), Vector2( -888, 55 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -336, 264 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 264 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Label:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -888, 15 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "button_in"
length = 0.18
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( -336, 264 ), Vector2( 0, 264 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 264 ), Vector2( -336, 264 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.09, 0.18 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Title" type="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -300.0
margin_bottom = 300.0
script = ExtResource( 3 )
scroll_velocity = -65

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="ParallaxLayer" parent="ParallaxBackground" index="0"]
motion_offset = Vector2( 24, 66 )

[node name="ParallaxLayer2" parent="ParallaxBackground" index="1"]
motion_offset = Vector2( 16, 66 )

[node name="ParallaxLayer3" parent="ParallaxBackground" index="2"]
motion_offset = Vector2( 8, 66 )

[node name="Label" type="Label" parent="."]
margin_left = -888.0
margin_top = 15.0
margin_right = -180.0
margin_bottom = 144.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "平台跳越测试"

[node name="text" type="AnimationPlayer" parent="Label"]
autoplay = "Text"
anims/RESET = SubResource( 4 )
anims/Text = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -336.0
margin_top = -36.0
margin_right = -104.0
margin_bottom = 858.0
custom_constants/separation = 30

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 232.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "开始"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 101.0
margin_right = 232.0
margin_bottom = 172.0
theme = ExtResource( 2 )
text = "设置"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 232.0
margin_bottom = 273.0
theme = ExtResource( 2 )
text = "退出"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -36.0
margin_right = 308.0
margin_bottom = 858.0
custom_constants/separation = 30

[node name="Button" type="Button" parent="VBoxContainer2"]
margin_right = 308.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "音乐:开"

[node name="Button2" type="Button" parent="VBoxContainer2"]
margin_top = 101.0
margin_right = 308.0
margin_bottom = 172.0
theme = ExtResource( 2 )
text = "音乐:关"

[node name="Button3" type="Button" parent="VBoxContainer2"]
margin_top = 202.0
margin_right = 308.0
margin_bottom = 273.0
theme = ExtResource( 2 )
text = "返回"

[node name="Title_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/button_in = SubResource( 1 )

[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button3" to="." method="_on_Button3_pressed"]

[editable path="ParallaxBackground"]
